<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountryOverview">

    <ImageView
        android:id="@+id/flagImage"
        android:layout_width="140dp"
        android:layout_height="85dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <View
        android:id="@+id/primerdivisor"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="#EDEDED"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        app:layout_constraintBottom_toTopOf="@+id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/populationValue"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/seconddivisor"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="#EDEDED"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        app:layout_constraintBottom_toTopOf="@+id/languages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationList" />

    <View
        android:id="@+id/thirddivisor"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="#EDEDED"
        app:layout_constraintBottom_toTopOf="@+id/nationalDish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languagesList"
        app:layout_constraintVertical_bias="0.526" />

    <View
        android:id="@+id/fourthdivisor"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="#EDEDED"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        app:layout_constraintBottom_toTopOf="@+id/religions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nationalDishList" />


    <View
        android:id="@+id/fourthdivisor2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="14dp"
        android:background="#EDEDED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/religionsList" />

    <TextView
        android:id="@+id/countryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/open_sans"
        android:text="TextView"
        android:textSize="28sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagImage" />

    <TextView
        android:id="@+id/capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/capital"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/population"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/currency"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/population"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/capitalValue"
        android:layout_width="141dp"
        android:layout_height="24dp"
        android:fontFamily="@font/open_sans"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/capital"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="@+id/capital"
        app:layout_constraintTop_toBottomOf="@+id/capital" />

    <TextView
        android:id="@+id/populationValue"
        android:layout_width="88dp"
        android:layout_height="22dp"
        android:fontFamily="@font/open_sans"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/population"
        app:layout_constraintStart_toStartOf="@+id/population"
        app:layout_constraintTop_toBottomOf="@+id/population" />

    <TextView
        android:id="@+id/currencyValue"
        android:layout_width="137dp"
        android:layout_height="22dp"
        android:fontFamily="@font/open_sans"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/currency"
        app:layout_constraintStart_toStartOf="@+id/currency"
        app:layout_constraintTop_toBottomOf="@+id/currency" />

    <TextView
        android:id="@+id/nationalDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:onClick="onFoodClicked"
        android:text="@string/foods"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/languagesList" />

    <TextView
        android:id="@+id/religions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:onClick="onReligionClicked"
        android:text="@string/religions"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/nationalDishList" />

    <TextView
        android:id="@+id/government"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:onClick="onReligionClicked"
        android:text="@string/government"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/fourthdivisor2" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:onClick="onFoodClicked"
        android:text="@string/location"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/capitalValue" />

    <TextView
        android:id="@+id/nationalDishList"
        android:layout_width="320dp"
        android:layout_height="31dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:onClick="onFoodClicked"
        android:text="TextView"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nationalDish" />

    <TextView
        android:id="@+id/religionsList"
        android:layout_width="319dp"
        android:layout_height="20dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:onClick="onReligionClicked"
        android:text="TextView"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/religions" />

    <TextView
        android:id="@+id/governmentList"
        android:layout_width="318dp"
        android:layout_height="21dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:onClick="onReligionClicked"
        android:text="TextView"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/government" />

    <TextView
        android:id="@+id/locationList"
        android:layout_width="203dp"
        android:layout_height="20dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:fontFamily="@font/open_sans"
        android:onClick="onFoodClicked"
        android:text="TextView"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="16dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onBackClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbtn" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="22dp"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="overviewFavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/emptyheart" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryName"
        app:srcCompat="@drawable/capitalstar" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/countryName"
        app:srcCompat="@drawable/population" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="28dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryName"
        app:srcCompat="@drawable/bill" />

    <TextView
        android:id="@+id/languagesList"
        android:layout_width="320dp"
        android:layout_height="33dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="TextView"
        android:textSize="13sp"
        android:onClick="onLanguageClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languages" />

    <TextView
        android:id="@+id/languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/languages"
        android:textSize="13sp"
        android:textStyle="bold"
        android:onClick="onLanguageClicked"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/locationList" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capitalValue"
        app:srcCompat="@drawable/location" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/languages" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/foods" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@drawable/religions" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourthdivisor2"
        app:srcCompat="@drawable/groups" />

    <Button
        android:id="@+id/goToMap"
        android:layout_width="93dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:stateListAnimator="@null"
        android:background="@drawable/map_round"
        android:onClick="goToMap"
        android:text="@string/viewOnMap"
        android:textColor="#ffffff"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primerdivisor" />


</androidx.constraintlayout.widget.ConstraintLayout>